--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 	background-color:#f5f5f5;
 }
 
-#testimonial{
+.testimonial{
 	padding:10px;
 	border: 1px solid black;
 	background-color:#f5f5f5;
@@ -11,7 +11,7 @@
 }
 
 .text{
-	font-family:normal;
+	font-family:read-write-plaintext-only;
 }
 
 .author{
